# TWK

./: CMakeLists.txt  CoreTypes.h  README.md  main.cpp
Buttons/: Button.cpp  Button.h
Figure/: BaseFigure.cpp  BaseFigure.h  Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
Game/: GameMode.cpp  GameMode.h
Random/: Random.cpp  Random.h
SDL2-2.26.0/x86_64-w64-mingw32/include/SDL2/: SDL.h  SDL_atomic.h  SDL_audio.h  SDL_gamecontroller.h  SDL_render.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_timer.h  SDL_video.h
